# fas_contents_deploy

./: .firebaserc  .gitignore  README.md  firebase.json  main.py  pyproject.toml
.github/workflows/: deploy.yml
public/: test.md
